--- a/ExamenLenInterp1-main/styles.css
+++ b/ExamenLenInterp1-main/styles.css
@@ -136,3 +136,54 @@ html,body{
 .footer-nav img{
     height: 50px;
 }
+
+.contjuego{
+    width: 600px;
+    margin: 6px auto;
+}
+
+.rect{
+    background-color: purple;
+    width: 30%;
+    padding-bottom: 30%;
+    float: left;
+    margin: 1.5%;
+    border-radius: 8px;
+    transition: background 0.6s;
+    -webkit-transition: background 0.6s;
+    -moz-transition: background 0.6s;
+
+}
+
+button{
+    border: none;
+    background: none;
+    text-transform: uppercase;
+    height: 100%;
+    font-weight: 700;
+    letter-spacing: 3.5px;
+    color: red;
+    font-size: inherit;
+    transition: all .5s;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    outline: none;
+}
+
+.btnjuego:hover{
+    color: white;
+    background-color: black;
+    color: white;
+}
+
+#hexcolor{
+    font-size: 130%;
+    border: 1px solid white;
+    border-radius: 5px;
+}
+
+#mensaje{
+    display: inline-block;
+    width: 20%;
+    font-size: 20px;
+}
